Add tests for VMScheduleManagerImpl